# personal-website

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  rollup.config.js  svelte.config.js
.github/workflows/: cron.yaml
bot/: Dockerfile  drizzle.config.ts  package-lock.json  package.json
bot/drizzle/: 0000_flawless_thunderbolts.sql  schema.ts
bot/drizzle/meta/: 0000_snapshot.json  _journal.json
bot/src/: index.ts
code-share/: .gitignore  README.md
code-share/src/: main.rs  paste_id.rs
infra/apps/: personal-website.yaml
infra/lb/: nginx-ingress.yaml  nginx.conf  nginx.yaml
infra/net/: duckdns-secret.yaml
knowledge/content/: index.md
personal-website/: Dockerfile  README.md  package-lock.json  package.json  pull-types.sh  svelte.config.js  tailwind.config.cjs
personal-website/.github/workflows/: cron.yaml
personal-website/src/: app.css  hooks.server.ts
personal-website/src/lib/: prometheus.ts  spotify.ts  supabase.ts
quartz/: .gitignore  quartz.config.ts  quartz.layout.ts
quartz/content/: index.md
resources/apps/: code-share.yaml  memo.yaml  pepe.yaml  personal-website.yaml  quartz.yaml
resources/infra/: grafana.yaml  influx.yaml  postgres.yaml  telegraf.conf  telegraf.yaml
resources/lb/: cloudflare-tunnel-ingress.yaml  nginx-deploy.yaml  nginx-ingress.yaml  nginx.yaml
resources/net/: duckdns.yaml  vpn.yaml
scripts/: export-grafana.sh  gen-secret.sh
snippet-share/: Cargo.toml  Dockerfile
src/lib/: spotify.ts
src/lib/style/: style.css  (+1 more)
src/routes/: +layout.svelte  +page.server.ts  +page.svelte  +page.ts
(+91 files in other folders)
