[package]
name = "code-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "5.0"
rand = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
ring = "0.16.19"
serde_json = "1.0"
serde_derive = "1.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
futures = "0.3"
